# network-manager-connection-action

./: Cargo.toml  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
example/: config.toml  network-manager-connection-action.service  network-manager-connection-notifier.service  ssh_canonicalization_gen.sh
src/: config.rs  main.rs
