[package]
name = "network-manager-connection-action"
description = "Execute commands on connections change using DBus network manager events"
version = "1.3.0"
authors = ["Hugues Morisset <morisset.hugues@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "BSD-2-Clause"
repository = "https://github.com/izissise/network-manager-connection-action"
homepage = "https://github.com/izissise/network-manager-connection-action"
categories = ["config", "os::linux-apis"]
keywords = ["systemd", "automation", "networking", "utility", "system"]

[dependencies]
env_logger = "0.6"
log = "0.4"
anyhow = "1"
thiserror = "1"
clap = "2.33.0"
serde = "1"
serde_derive = "1"
toml = "0.5"
dbus = { version = "0.9", features=["futures"] }
dbus-tokio = "0.7"
tokio = {version = "1", features=["time", "macros", "rt-multi-thread", "process"]}
futures = "0.3"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["prepush-hook" , "run-cargo-test", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }
