[package]
name = "network-manager-connection-action"
description = "Execute commands on connections change using DBus network manager events"
version = "1.4.0"
authors = ["Hugues Morisset <morisset.hugues@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "BSD-2-Clause"
repository = "https://github.com/izissise/network-manager-connection-action"
homepage = "https://github.com/izissise/network-manager-connection-action"
categories = ["config", "os::linux-apis"]
keywords = ["systemd", "automation", "networking", "utility", "system"]

[dependencies]
env_logger = "0.11"
log = "0.4"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["cargo"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dbus = { version = "0.9", features=["futures"] }
dbus-tokio = "0.7"
tokio = {version = "1", features=["time", "macros", "rt-multi-thread", "process"]}
futures = "0.3"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["prepush-hook" , "run-cargo-test", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }
